# unreadable_language_pack

./: .gitattributes  .gitignore  .gitmodules  README.md  README_en.md  base.py  converter.py  fix_data.py  ja_kk.json  pack.mcmeta  pack.py  pyproject.toml  requirements.txt  ruff.toml  source.py
.github/workflows/: pylint.yml  ruff.yml  update.yml
data/: dict.txt  fixed_zh_cy.json  fixed_zh_gr.json  fixed_zh_mps2.json  fixed_zh_py.json  fixed_zh_py_manual.json  fixed_zh_pyw.json  fixed_zh_sgr.json  fixed_zh_source.json  fixed_zh_ty.json  fixed_zh_wg.json  fixed_zh_xj.json  fixed_zh_yale.json  ipa.json  manyogana.json  phrases.json  py2cy.json  py2gr.json  py2ipa.json  py2kk.json  py2mps2.json  py2sgr.json  py2ty.json  py2wg.json  py2xj.json  py2yale.json  rep_ja_kk.json  rep_zh.json  rep_zh_pyw.json  symbols.json  wei.json
data/fixed/: fixed_zh_cy.json  fixed_zh_gr.json  fixed_zh_mps2.json  fixed_zh_py.json  fixed_zh_py_manual.json  fixed_zh_sgr.json  fixed_zh_source.json  fixed_zh_ty.json  fixed_zh_universal.json  fixed_zh_wg.json  fixed_zh_xj.json  fixed_zh_yale.json
data/rep/: rep_ja_kk.json  rep_zh.json
output/: en_i7h.json  ja_kk.json  ja_my.json  zh_bpmf.json  zh_cy.json  zh_gr.json  zh_hm.json  zh_ipa.json  zh_kk.json  zh_mps2.json  zh_msp2.json  zh_py.json  zh_pyw.json  zh_sgr.json  zh_split.json  zh_ty.json  zh_wg.json  zh_xj.json  zh_yale.json
table/: comparison_table_1.tsv  comparison_table_2.tsv
