[project]
name = "unreadable-language-pack"
version = "1.0.0"
description = "A Python project for generating unreadable language resource pack."
readme = "README.md"
authors = [{ name = "SkyEye_FAST", email = "skyeyefast@foxmail.com" }]
maintainers = [{ name = "SkyEye_FAST", email = "skyeyefast@foxmail.com" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "jieba>=0.42.1",
    "orjson>=3.10.18",
    "pypinyin>=0.52.0",
    "pypinyin-dict>=0.8.0",
    "requests>=2.32.3",
    "romajitable>=0.0.1",
]

[project.urls]
Repository = "https://github.com/SkyEye_FAST/unreadable-language-pack"
Issues = "https://github.com/SkyEye_FAST/unreadable-language-pack/issues"
